syntax = "proto3";

package messaging.common;

message EntityReference {
  string entityType = 1;
  int64 id = 2;
}